RESOLVED FIXED115195
[WIN] Guard cfHDropFormat() with USE(CF) instead of OS(WINCE)
https://bugs.webkit.org/show_bug.cgi?id=115195
Summary [WIN] Guard cfHDropFormat() with USE(CF) instead of OS(WINCE)
Patrick R. Gansterer
Reported 2013-04-25 12:27:59 PDT
[WIN] Guard cfHDropFormat() with USE(CF) instead of OS(WINCE)
Attachments
Patch (2.74 KB, patch)
2013-04-25 12:31 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2013-04-25 12:31:23 PDT
WebKit Commit Bot
Comment 2 2013-04-29 07:25:12 PDT
Comment on attachment 199737 [details] Patch Clearing flags on attachment: 199737 Committed r149280: <http://trac.webkit.org/changeset/149280>
WebKit Commit Bot
Comment 3 2013-04-29 07:25:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.