[WIN] Guard cfHDropFormat() with USE(CF) instead of OS(WINCE) https://bugs.webkit.org/show_bug.cgi?id=115195

Reviewed by Andreas Kling.

USE(CF) is the correct guard, which works on desktop pcs too.

* platform/win/ClipboardWin.cpp:
(WebCore::ClipboardWin::files):
* platform/win/DragDataWin.cpp:
(WebCore::DragData::containsFiles):
(WebCore::DragData::numberOfFiles):
(WebCore::DragData::asFilenames):


Canonical link: https://commits.webkit.org/133768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149280 268f45cc-cd09-0410-ab3c-d52691b4dbfc